tests/compile_fail/invalid_scale_values_literal.rs
use surgeist_style::ScaleValues;

fn main() {
    let _values = ScaleValues { values: vec![1.0] };
}
