tests/compile_fail/invalid_scale_values_literal.stderr
error[E0451]: field `values` of struct `ScaleValues` is private
 --> tests/compile_fail/invalid_scale_values_literal.rs:4:33
  |
4 |     let _values = ScaleValues { values: vec![1.0] };
  |                                 ^^^^^^ private field
